Pair the 2.0.0 Companion and preserve installed development JARs
Took 2 minutes